RESOLVED FIXED86899
[BlackBerry] DumpRenderTree should call resetInternalsObject
https://bugs.webkit.org/show_bug.cgi?id=86899
Summary [BlackBerry] DumpRenderTree should call resetInternalsObject
Caio Marcelo de Oliveira Filho
Reported 2012-05-18 14:21:00 PDT
This is important for restoring the state of Settings changed using window.internals.settings.
Attachments
Git patch (2.33 KB, patch)
2012-05-23 04:47 PDT, Xiaobo Wang
zimmermann: review+
zimmermann: commit-queue-
Git patch updated for code style (2.33 KB, patch)
2012-05-23 05:28 PDT, Xiaobo Wang
no flags
Git patch adding reviewer (2.34 KB, patch)
2012-05-23 18:54 PDT, Xiaobo Wang
no flags
Caio Marcelo de Oliveira Filho
Comment 1 2012-05-18 14:25:15 PDT
...between test runs.
Ming Xie
Comment 2 2012-05-22 17:44:15 PDT
+Xiaobo, maybe he can help on this.
Xiaobo Wang
Comment 3 2012-05-23 04:47:36 PDT
Created attachment 143532 [details] Git patch How about this?
WebKit Review Bot
Comment 4 2012-05-23 04:49:31 PDT
Attachment 143532 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'ChangeLog', u'Tools/DumpRenderTree/blackbe..." exit_code: 1 Tools/DumpRenderTree/blackberry/DumpRenderTree.cpp:23: Alphabetical sorting problem. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nikolas Zimmermann
Comment 5 2012-05-23 04:53:56 PDT
Comment on attachment 143532 [details] Git patch r=me, but please fix the include. Side note: Other ports need access to the JSGlobalContextRef in more than one place, if we do need that as well, make sure to share the code.
Xiaobo Wang
Comment 6 2012-05-23 05:28:22 PDT
Created attachment 143543 [details] Git patch updated for code style Sure, thanks Nikolas!
WebKit Review Bot
Comment 7 2012-05-23 06:45:03 PDT
Comment on attachment 143543 [details] Git patch updated for code style Rejecting attachment 143543 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12768215
WebKit Review Bot
Comment 8 2012-05-23 08:11:22 PDT
Comment on attachment 143543 [details] Git patch updated for code style Rejecting attachment 143543 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/12767295
WebKit Review Bot
Comment 9 2012-05-23 10:45:43 PDT
Comment on attachment 143543 [details] Git patch updated for code style Clearing flags on attachment: 143543 Committed r118201: <http://trac.webkit.org/changeset/118201>
Xiaobo Wang
Comment 10 2012-05-23 18:54:19 PDT
Created attachment 143702 [details] Git patch adding reviewer
Xiaobo Wang
Comment 11 2012-05-23 19:01:47 PDT
(In reply to comment #10) > Created an attachment (id=143702) [details] > Git patch adding reviewer Forget this, the patch above has been landed, sorry.
Caio Marcelo de Oliveira Filho
Comment 12 2012-07-25 10:21:55 PDT
Removed r? and close the bug since the patch already landed.
Note You need to log in before you can comment on or make changes to this bug.