[BlackBerry] Reset JS state for each test https://bugs.webkit.org/show_bug.cgi?id=86899

Patch by Xiaobo Wang <xbwang@torchmobile.com.cn> on 2012-05-23
Reviewed by Nikolas Zimmermann.

* DumpRenderTree/blackberry/DumpRenderTree.cpp:
 (BlackBerry::WebKit::DumpRenderTree::resetToConsistentStateBeforeTesting):

Canonical link: https://commits.webkit.org/105008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118201 268f45cc-cd09-0410-ab3c-d52691b4dbfc